# ambiq_zephyr

./: .gitignore  CMakeLists.txt  Kconfig.am  west.yml
drivers/ambt53/: Kconfig  ambt53_xip_driver.c  ambt53_xip_driver.h
drivers/mspi/: CMakeLists.txt  Kconfig  costom_mspi_ambiq.c  custom_mspi_ambiq.h
dts/bindings/: custom,ambiq-qspi.yaml  custom,ambt53.yaml
modules/: modules.cmake
samples/: CMakeLists.txt  Kconfig
samples/out_of_tree_driver/: CMakeLists.txt  prj.conf
samples/out_of_tree_driver/ambt53_xip_module/zephyr/: CMakeLists.txt  Kconfig  ambt53_xip_driver.h
samples/out_of_tree_driver/boards/: apollo4p_evb.overlay
samples/out_of_tree_driver/custom_drivers/zephyr/: CMakeLists.txt  Kconfig  module.yml
samples/out_of_tree_driver/custom_drivers/zephyr/ambt53/: Kconfig  ambt53_xip_driver.c
samples/out_of_tree_driver/custom_drivers/zephyr/mspi/: CMakeLists.txt  costom_mspi_ambiq.c  custom_mspi_ambiq.h
samples/out_of_tree_driver/dts/bindings/: custom,ambiq-qspi.yaml  custom,ambt53.yaml
samples/out_of_tree_driver/src/: main.c
zephyr/: module.yml
